manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  type: ClusterIP
  selector:
    app: bff
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3080
