manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-ingress
  annotations: 
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: app.abaxhasibepati.ml
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bff-service
            port:
              number: 80
